[package]
name = "rsmap"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
ratatui = "0.24"
crossterm = "0.27"
cidr = "0.2"
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
socket2 = "0.5"
local-ip-address = "0.5"
indicatif = "0.17"
libc = "0.2"
humantime-serde = "1.1"
once_cell = "1.19"
regex = "1.10"
csv = "1.3"